.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:46:42 **** Build of configuration Debug for project Echo_Serv_modify ****
make all 
Building file: ../src/CEpollMng.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/CEpollMng.d" -MT"src/CEpollMng.o" -o "src/CEpollMng.o" "../src/CEpollMng.cpp"
Finished building: ../src/CEpollMng.cpp
 
Building file: ../src/CUser.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/CUser.d" -MT"src/CUser.o" -o "src/CUser.o" "../src/CUser.cpp"
Finished building: ../src/CUser.cpp
 
Building file: ../src/CUserMng.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/CUserMng.d" -MT"src/CUserMng.o" -o "src/CUserMng.o" "../src/CUserMng.cpp"
In file included from ../src/CUserMng.h:13:0,
                 from ../src/CUserMng.cpp:8:
../src/PacketDefine.h:41:18: warning: junk at end of ‘#pragma pack’ [-Wpragmas]
 #pragma pack(pop); //정렬 설정을 이전 상태(기본값)로 되돌림
                  ^
../src/CUserMng.cpp: In member function ‘void CUserMng::Server_Handling()’:
../src/CUserMng.cpp:31:2: error: ‘epoll_event* CEpollMng::m_events’ is private within this context
  m_events = EpollCreate();
  ^~~~~~~~
In file included from ../src/CUserMng.h:11:0,
                 from ../src/CUserMng.cpp:8:
../src/CEpollMng.h:26:22: note: declared private here
  struct epoll_event *m_events;
                      ^~~~~~~~
../src/CUserMng.cpp:45:8: error: ‘epoll_event* CEpollMng::m_events’ is private within this context
    if (m_events[i].data.fd == m_serv_sock)
        ^~~~~~~~
In file included from ../src/CUserMng.h:11:0,
                 from ../src/CUserMng.cpp:8:
../src/CEpollMng.h:26:22: note: declared private here
  struct epoll_event *m_events;
                      ^~~~~~~~
../src/CUserMng.cpp:69:27: error: ‘epoll_event* CEpollMng::m_events’ is private within this context
      if (m_clntSock[j] == m_events[i].data.fd)
                           ^~~~~~~~
In file included from ../src/CUserMng.h:11:0,
                 from ../src/CUserMng.cpp:8:
../src/CEpollMng.h:26:22: note: declared private here
  struct epoll_event *m_events;
                      ^~~~~~~~
../src/CUserMng.cpp:72:22: error: ‘epoll_event* CEpollMng::m_events’ is private within this context
        Close_Client(&m_events[i].data.fd);
                      ^~~~~~~~
In file included from ../src/CUserMng.h:11:0,
                 from ../src/CUserMng.cpp:8:
../src/CEpollMng.h:26:22: note: declared private here
  struct epoll_event *m_events;
                      ^~~~~~~~
make: *** [src/CUserMng.o] Error 1
src/subdir.mk:27: recipe for target 'src/CUserMng.o' failed
"make all" terminated with exit code 2. Build might be incomplete.
